--- a/index.html
+++ b/index.html
@@ -52,22 +52,31 @@
                 <h1>5-Day Forecast:</h1>
             <div class="card-container">  
                 <div class="card">
-                    <h3>8.15.20</h3>
+                    <h3 id="day"></h3>
                     <i></i>
                     <p id="card-temp"></p>
                     <p id="card-humid"></p>
                 </div>
                 <div class="card">
-
+                    <h3 id="day-two"></h3>
+                    <i></i>
+                    <p id="card-temp"></p>
+                    <p id="card-humid"></p>
                 </div>
                 <div class="card">
-
+                    <h3 id="day-three"></h3>
+                    <i></i>
+                    <p id="card-temp"></p>
+                    <p id="card-humid"></p>
                 </div>
                 <div class="card">
-
+                    <h3 id="day-four"></h3>
                 </div>
                 <div class="card">
-
+                    <h3 id="day-five"></h3>
+                    <i></i>
+                    <p id="card-temp"></p>
+                    <p id="card-humid"></p>
                 </div>
             </div>
             </div>
