add temp to 5 day forecast

--- a/index.html
+++ b/index.html
@@ -60,23 +60,25 @@
                 <div class="card">
                     <h3 id="day-two"></h3>
                     <i></i>
-                    <p id="card-temp"></p>
-                    <p id="card-humid"></p>
+                    <p id="card-temp-two"></p>
+                    <p id="card-humid-two"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-three"></h3>
                     <i></i>
-                    <p id="card-temp"></p>
-                    <p id="card-humid"></p>
+                    <p id="card-temp-three"></p>
+                    <p id="card-humid-three"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-four"></h3>
+                    <p id="card-temp-four"></p>
+                    <p id="card-humid-four"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-five"></h3>
                     <i></i>
-                    <p id="card-temp"></p>
-                    <p id="card-humid"></p>
+                    <p id="card-temp-five"></p>
+                    <p id="card-humid-five"></p>
                 </div>
             </div>
             </div>
