styled search button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <form>
                 <label for="city">Search for a City:</label> 
                     <br>
-                <input type="text" id="cityIn" name="city" value="austin"> 
-                    <button onclick="weatherFunction()"><i class="material-icons">search</i></button>
+                <input type="text" id="cityIn" name="city" value=""> 
+                    <button class="submit-btn" onclick="weatherFunction()"><i class="material-icons">search</i></button>
             </form>
             <ul class="list-cities">
                 <li><button class="btn" id="austin">Austin</button></li>
