--- a/index.html
+++ b/index.html
@@ -53,30 +53,31 @@
             <div class="card-container">  
                 <div class="card">
                     <h3 id="day"></h3>
-                    <i></i>
+                    <img class="icon" id="icon-one">
                     <p id="card-temp"></p>
                     <p id="card-humid"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-two"></h3>
-                    <i></i>
+                    <img class="icon" id="icon-two">
                     <p id="card-temp-two"></p>
                     <p id="card-humid-two"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-three"></h3>
-                    <i></i>
+                    <img class="icon" id="icon-three">
                     <p id="card-temp-three"></p>
                     <p id="card-humid-three"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-four"></h3>
+                    <img class="icon" id="icon-four">
                     <p id="card-temp-four"></p>
                     <p id="card-humid-four"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-five"></h3>
-                    <i></i>
+                    <img class="icon" id="icon-five">
                     <p id="card-temp-five"></p>
                     <p id="card-humid-five"></p>
                 </div>
