--- a/index.html
+++ b/index.html
@@ -54,32 +54,32 @@
                 <div class="card">
                     <h3 id="day"></h3>
                     <img class="icon" id="icon-one">
-                    <p id="card-temp"></p>
-                    <p id="card-humid"></p>
+                    <p class="card-temp" id="card-temp"></p>
+                    <p class="card-hum" id="card-humid"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-two"></h3>
                     <img class="icon" id="icon-two">
-                    <p id="card-temp-two"></p>
-                    <p id="card-humid-two"></p>
+                    <p class="card-temp" id="card-temp-two"></p>
+                    <p class="card-hum" id="card-humid-two"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-three"></h3>
                     <img class="icon" id="icon-three">
-                    <p id="card-temp-three"></p>
-                    <p id="card-humid-three"></p>
+                    <p class="card-temp" id="card-temp-three"></p>
+                    <p class="card-hum" id="card-humid-three"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-four"></h3>
                     <img class="icon" id="icon-four">
-                    <p id="card-temp-four"></p>
-                    <p id="card-humid-four"></p>
+                    <p class="card-temp" id="card-temp-four"></p>
+                    <p class="card-hum" id="card-humid-four"></p>
                 </div>
                 <div class="card">
                     <h3 id="day-five"></h3>
                     <img class="icon" id="icon-five">
-                    <p id="card-temp-five"></p>
-                    <p id="card-humid-five"></p>
+                    <p class="card-temp" id="card-temp-five"></p>
+                    <p class="card-hum" id="card-humid-five"></p>
                 </div>
             </div>
             </div>
