Add dynamic date and city name to weather details

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="main-info-container">
             <!-- weather details -->
             <div class="weather-details-container">
-                <h1 id="current-city">Austin (8.15.20)☁️</h1>
+                <h1 id="current-city"></h1>
                 <ul class="details-list">
                     <li id="temperature">temp</li>
                     <li id="humidity">hum</li>
